<resources>
    <string name="app_name">ConsigliaViaggi</string>
    <string name="nome_struttura">Nome struttura</string>
    <string name="invia">Invia</string>
    <string name="prezzo_min">Prezzo Minimo</string>
    <string name="prezzo_max">Prezzo Massimo</string>
    <string name="ricerca">Ricerca</string>
    <string name="cerca_per_vicinanza">Cerca per vicinanza</string>
    <string name="citt">Città</string>
    <string name="fascia_prezzo_text">Selezionare la fascia di prezzo (in €)</string>
    <string name="tipo_struttura_text">Selezionare il tipo di struttura</string>
    <string-array name="tipo_struttura">
        <item>Tutte</item>
        <item>Hotel</item>
        <item>Ristorante</item>
        <item>Attrazione</item>
    </string-array>

    <string name="login">Login</string>

    <string name="password_dimenticata">Password Dimenticata</string>

    <string name="prompt_username">Username</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_conferma_password">Conferma Password</string>

    <string name="signup">Iscriviti</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_password_dimenticata">Recupero Password</string>
    <string name="prompt_email">"E-mail"</string>
    <string name="prompt_email_text">"Inserisci l'e-mail per ricavare la domanda segreta personale."</string>

    <string name="prompt_domanda_segreta_text">"Rispondi alla domanda segreta per poter modificare la password."</string>

    <string name="prompt_modifica_password_text">"Inserisci una nuova password."</string>
    <string name="prompt_nuova_password">Nuova Password</string>

    <string name="prompt_nome">"Nome"</string>
    <string name="prompt_cognome">"Cognome"</string>
    <string name="prompt_domanda_segreta">"Domanda Segreta"</string>
    <string name="prompt_risposta">"Risposta"</string>

    <string name="prompt_iscrizione_text">"Inserisci i dati nei campi sottoindicati per creare un account."</string>

    <string name="prompt_map">"Visualizza mappa"</string>
    <string name="title_activity_maps">Mappa</string>

    <string name="prompt_aggiungi_recensione">"Aggiungi Recensione"</string>
    <string name="prompt_invia_recensione">"Invia Recensione"</string>

    <string name="prompt_filtro">Filtri:</string>
    <string name="filtro_recensione_text">Selezionare il tipo di filtraggio</string>
    <string name="valutazione_text">Valutazione</string>
    <string-array name="filtro_recensione">
        <item>Nessuno</item>
        <item>Ordina per numero stelle crescente</item>
        <item>Ordina per numero stelle decrescente</item>
    </string-array>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="logout">Logout</string>

    <string name="prompt_titolo_recensione">Titolo</string>
    <string name="prompt_commento_recensione">Commento</string>
    <string name="prompt_recensione_text">Inserisci i dati nei campi seguenti per richiedere un\'aggiunta di una nuova recensione alla struttura.</string>
    <string name="voto_recensione_text">Voto:</string>
    <string name="switch_recensione_text">Pubblica con nome e cognome</string>
    <string name="modifica_button">Modifica</string>
    <string name="prompt_modifica_dati_text">I campi sono riempiti con i tuoi dati correnti, modificali per cambiare i tuoi dati.</string>
    <string name="prompt_nome_struttura_text"><![CDATA[<<Inserire il nome completo (Case Sensitive)>>]]></string>
    <string name="prompt_login">Inserire i dati per accedere</string>
    <string name="splash_app_inizializzazione_text">Inizializzazione databse...</string>
    <string-array name="voto_recensione">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
