<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:hint="@string/nome_struttura"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/ricerca_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome_struttura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ricerca_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="92dp"
        android:text="@string/ricerca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="100dp"
        android:text="@string/cerca_per_vicinanza"
        android:textColorLink="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:hint="@string/citt"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/citta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="216dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/prezzo_min"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:ems="10"
        android:hint="@string/prezzo_min"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/prezzo_max"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:ems="10"
        android:hint="@string/prezzo_max"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintStart_toEndOf="@+id/prezzo_min"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>